--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -1,8 +1,9 @@
 {
   "scripts": {
-    "watch": "chokidar 'src/**/*.elm' -c 'elm make src/Main.elm --output run/elm.compiled.js' --initial"
+    "start": "parcel serve src/_index.html --port 8088 --no-cache --out-file index.html"
   },
   "devDependencies": {
-    "chokidar-cli": "^1.2.0"
+    "parcel-bundler": "^1.9.7",
+    "parcel-plugin-elm": "^0.1.3-alpha"
   }
 }
