--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -1,8 +1,10 @@
 {
   "scripts": {
-    "start": "parcel serve src/_index.html --port 8088 --no-cache --out-file index.html"
+    "start": "parcel serve src/index.html --port 8088 --no-cache --out-file index.html",
+    "build": "parcel build src/index.html --no-source-maps --no-cache --out-file index.html"
   },
   "devDependencies": {
+    "parcel": "^1.9.7",
     "parcel-bundler": "^1.9.7",
     "parcel-plugin-elm": "^0.1.3-alpha"
   }
