--- a/templates/default/Makefile
+++ b/templates/default/Makefile
@@ -1,15 +1,5 @@
-default: run
+default: build
 
 build:
-	elm make src/Main.elm --output dist/elm.compiled.js --warn
-
-# work directly with elm files
-# this allows you to see update history (state changes)
-.PHONY: run
-run:
-	elm reactor
-
-# watch elm files and recompile js on elm file change
-# this allows you to preview the index.html (with styles, etc.)
-watch:
-	npm run watch
+	npm install
+	npm run build
