--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -1,15 +1,15 @@
 {
   "scripts": {
-    "start": "elm reactor",
-    "watch": "echo *DISABLED* parcel serve src/index.html --port 8088 --no-cache --out-file index.html",
-    "build": "echo *DISABLED* parcel build src/index.html --no-source-maps --no-cache --out-file index.html"
+    "start": "elm-live src/Main.elm --output=dev/elm.js --dir=dev --port=8088",
+    "build": "npm run build-elm && npm run build-uglify",
+    "build-elm": "elm make src/Main.elm --output dist/elm.compiled.js --optimize",
+    "build-uglify": "uglifyjs dist/elm.compiled.js --compress 'pure_funcs=\"F2,F3,F4,F5,F6,F7,F8,F9,A2,A3,A4,A5,A6,A7,A8,A9\",pure_getters,keep_fargs=false,unsafe_comps,unsafe' | uglifyjs --mangle --output=dist/elm.min.js"
   },
   "dependencies": {
-    "elm": "^0.19.0"
+    "elm": "^0.19.0",
+    "uglify": "^0.1.5"
   },
   "devDependencies": {
-    "parcel": "^1.9.7",
-    "parcel-bundler": "^1.9.7",
-    "parcel-plugin-elm": "^0.1.3-alpha"
+    "elm-live": "^3.0.0"
   }
 }
