--- a/templates/default/package.json
+++ b/templates/default/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "elm-live src/Main.elm --output=dev/elm.js --dir=dev --port=8088",
+    "start": "elm-live src/Main.elm --output=dev/elm.js --dir=dev --port=8088 --pushstate",
     "build": "npm run build-elm && npm run build-uglify",
     "build-elm": "elm make src/Main.elm --output dist/elm.compiled.js --optimize",
     "build-uglify": "uglifyjs dist/elm.compiled.js --compress 'pure_funcs=\"F2,F3,F4,F5,F6,F7,F8,F9,A2,A3,A4,A5,A6,A7,A8,A9\",pure_getters,keep_fargs=false,unsafe_comps,unsafe' | uglifyjs --mangle --output=dist/elm.min.js"
